deploy: db666445f2e4ccaaa9a016be6a2f639849236568

--- a/pr-52/index.html
+++ b/pr-52/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="CivicTechWR is a community group that brings together people from different backgrounds to actively solve issues facing our local community of Kitchener-Waterloo using design and technology."
     />
+    <meta name="facebook-domain-verification" content="ek2rz7d30q8ive1r9h3vxiacn9pf3f" />
     <link rel="icon" href="/images/logos/civictechwr_logo_black.png" type="image/x-icon" />
     <link rel="shortcut icon" href="/images/logos/civictechwr_logo_black.png" type="image/x-icon" />
 
